Fixed PSI periphery contracs

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
-build/
-node_modules/
+
+.env
+
+abi
+artifacts
+build
+cache
+migrations
+migrations_
+typechain
+node_modules
+
+/abi/
+/artifacts/
+/build/
+/cache/
+/migrations/
+/migrations_/
+/typechain/
+/node_modules/
