--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "pancakeswap-peripheral",
+  "name": "@passive-income/dpex-peripheral",
   "version": "1.1.0-beta.0",
-  "description": "🎚 Peripheral smart contracts for interacting with pancake",
+  "description": "🎚 Peripheral smart contracts for interacting with dpex",
   "engines": {
     "node": ">=10"
   },
-  "homepage": "https://pancakeswap.finance",
+  "homepage": "http://dpex.passive-income.io",
   "repository": {
     "type": "git",
-    "url": "https://github.com/pancakeswap/pancake-swap-periphery.git"
+    "url": "https://github.com/PSI-Passive-Income/DPEX-swap-periphery"
   },
   "files": [
     "build",
@@ -17,22 +17,39 @@
   "dependencies": {
     "@uniswap/lib": "1.1.1",
     "@uniswap/v2-core": "^1.0.1",
-    "truffle-hdwallet-provider": "^1.0.17",
-    "truffle-plugin-verify": "^0.4.0"
+    "@passive-income/dpex-swap-core": "~0.1.3",
+    "@openzeppelin/contracts": "^3.3.0-solc-0.7",
+    "@openzeppelin/contracts-upgradeable": "^3.3.0-solc-0.7",
+    "@openzeppelin/test-helpers": "^0.5.10",
+    "@truffle/hdwallet-provider": "^1.2.1",
+    "dotenv": "^8.2.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.6",
-    "@types/mocha": "^5.2.7",
-    "chai": "^4.2.0",
-    "ethereum-waffle": "^2.4.1",
-    "ethereumjs-util": "^6.2.0",
-    "mocha": "^6.2.2",
     "ncp": "^2.0.0",
     "prettier": "^1.19.1",
     "rimraf": "^3.0.0",
-    "solc": "0.6.6",
-    "ts-node": "^8.5.4",
-    "typescript": "^3.7.3"
+    "@nomiclabs/hardhat-ethers": "^2.0.1",
+    "@nomiclabs/hardhat-etherscan": "^2.1.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@openzeppelin/hardhat-upgrades": "^1.5.0",
+    "@openzeppelin/truffle-upgrades": "^1.4.0",
+    "@typechain/ethers-v5": "^5.0.0",
+    "@types/chai": "^4.2.14",
+    "@types/mocha": "^8.2.0",
+    "@types/node": "^14.14.21",
+    "axios": "^0.21.1",
+    "chai": "^4.2.0",
+    "ethereum-waffle": "^3.2.1",
+    "ethereumjs-util": "^6.2.0",
+    "ethers": "^5.0.26",
+    "hardhat": "^2.0.8",
+    "hardhat-abi-exporter": "^2.0.8",
+    "hardhat-typechain": "^0.3.4",
+    "mocha": "^8.2.1",
+    "solc": "^0.7.6",
+    "ts-node": "^9.1.1",
+    "typechain": "^4.0.1",
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "lint": "yarn prettier ./test/*.ts --check",
