--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,12 @@
     "module": "commonjs",
     "strict": true,
     "esModuleInterop": true,
-    "resolveJsonModule": true
-  }
+    "outDir": "dist",
+    "resolveJsonModule": true,
+    "strictNullChecks": false
+  },
+  "include": ["./scripts", "./test"],
+  "files": [
+    "./hardhat.config.ts"
+  ]
 }
