--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@passive-income/dpex-peripheral",
-  "version": "1.1.0-beta.0",
+  "version": "1.1.0",
   "description": "🎚 Peripheral smart contracts for interacting with dpex",
   "engines": {
     "node": ">=10"
@@ -8,28 +8,30 @@
   "homepage": "http://dpex.passive-income.io",
   "repository": {
     "type": "git",
-    "url": "https://github.com/PSI-Passive-Income/DPEX-swap-periphery"
+    "url": "https://github.com/PSI-Passive-Income/DPEX-swap-periphery.git"
+  },
+  "publishConfig": {
+    "registry": "http://registry.npmjs.org"
   },
   "files": [
-    "build",
-    "contracts"
+    "abi",
+    "artifacts",
+    "contracts",
+    "typechain"
   ],
   "dependencies": {
-    "@uniswap/lib": "1.1.1",
-    "@uniswap/v2-core": "^1.0.1",
-    "@passive-income/dpex-swap-core": "~0.1.3",
     "@openzeppelin/contracts": "^3.3.0-solc-0.7",
     "@openzeppelin/contracts-upgradeable": "^3.3.0-solc-0.7",
     "@openzeppelin/test-helpers": "^0.5.10",
+    "@passive-income/dpex-swap-core": "~0.1.3",
     "@truffle/hdwallet-provider": "^1.2.1",
+    "@uniswap/lib": "1.1.1",
     "dotenv": "^8.2.0"
   },
   "devDependencies": {
-    "ncp": "^2.0.0",
-    "prettier": "^1.19.1",
-    "rimraf": "^3.0.0",
     "@nomiclabs/hardhat-ethers": "^2.0.1",
     "@nomiclabs/hardhat-etherscan": "^2.1.0",
+    "@nomiclabs/hardhat-ganache": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/hardhat-upgrades": "^1.5.0",
     "@openzeppelin/truffle-upgrades": "^1.4.0",
@@ -39,13 +41,16 @@
     "@types/node": "^14.14.21",
     "axios": "^0.21.1",
     "chai": "^4.2.0",
-    "ethereum-waffle": "^3.2.1",
+    "ethereum-waffle": "^3.3.0",
     "ethereumjs-util": "^6.2.0",
-    "ethers": "^5.0.26",
-    "hardhat": "^2.0.8",
+    "ethers": "^5.0.31",
+    "hardhat": "^2.0.11",
     "hardhat-abi-exporter": "^2.0.8",
     "hardhat-typechain": "^0.3.4",
     "mocha": "^8.2.1",
+    "ncp": "^2.0.0",
+    "prettier": "^1.19.1",
+    "rimraf": "^3.0.0",
     "solc": "^0.7.6",
     "ts-node": "^9.1.1",
     "typechain": "^4.0.1",
@@ -54,13 +59,11 @@
   "scripts": {
     "lint": "yarn prettier ./test/*.ts --check",
     "lint:fix": "yarn prettier ./test/*.ts --write",
-    "clean": "rimraf ./build/",
-    "copy-v1-artifacts": "ncp ./buildV1 ./build",
+    "clean": "rimraf ./abi/ && rimraf ./artifacts/ && rimraf ./cache/ && rimraf ./typechain/",
     "precompile": "yarn clean",
-    "compile": "waffle .waffle.json",
-    "postcompile": "yarn copy-v1-artifacts",
+    "compile": "hardhat compile",
     "pretest": "yarn compile",
-    "test": "mocha",
+    "test": "hardhat test",
     "prepublishOnly": "yarn test"
   },
   "license": "GPL-3.0-or-later"
